--- a/index.html
+++ b/index.html
@@ -126,16 +126,7 @@
               <!-- question text -->
               <div class="question-text">
                 <p>
-                  I was science background student until college and i always like to do any IT related works from my
-                  childhood.After finished my college i did 1 year diploma on computing where i got fundamental knowledge on
-                  different OS,browsering internet,c++ programming language.In 2015,i planned to complete bachelor in abroad and
-                  i was planning to study in software engineering but as we have small family business ,so my parents asked me
-                  to do business management course.At that time,i was so younge and didn't know what is my interesting field. So
-                  i came in Estonia for my higher study which was joining programme(Estonia,Lithuania and Portugal).As i always
-                  like to learn something new.So i was studying and learning something new in this course but in my second year
-                  i noticed that i was spending more time to learn different IT-related things and enjoying a lot because
-                  it is kind of my hobby but didn't follow the exact specific path to be on specilist one particular area of
-                  programming.
+                  I was a science background student until college and I always like to do any IT related works since my childhood. After finishing college I did a 1-year diploma in computing where I got fundamental knowledge of programming. In 2015, I planned to complete a bachelor's in abroad and I was planning to study software engineering but as we have a small family business, so my parents asked me to do a business management course. At that time, I was so young and didn't know what is my true interesting field. So I came to Estonia for my higher study which was joining the program (Estonia, Lithuania, and Portugal). As I always like to learn something new. So I was studying and learning something new in this course but in my second year, I noticed that I was spending more time learning different IT-related things and enjoying it a lot because it is kind of my hobby but didn't follow the exact specific path to be specialist on one particular area of programming.
                 </p>
               </div>
             </article>
