--- a/index.html
+++ b/index.html
@@ -148,12 +148,7 @@
               <!-- question text -->
               <div class="question-text">
                 <p>
-                  In 20th june,2018 i decided that i want to be a full stack web developer and started coding to follow
-                  W3schools.When i made my first website(this portfolio website) by html and css ,i can not explain how much i was happpy.FIrst
-                  it was made by using float layout and without javascript and step by step i added new feature and changed float to
-                  flex&grid layout and javascript for some functionality.As i was full time student in my business management
-                  course in university and alos part time working in a company as a junior marketing manager.That's
-                  why i couldn't able to give much time on it.
+                  On 20th June 2018, I decided that I want to be a full-stack web developer and started coding to follow W3schools. When I made my first website(this portfolio website) with HTML and CSS, I can not explain how much I was happy. First, it was made by using float layout and without javascript, and step by step, I added a new feature and changed float to flex&grid layout and javascript for some functionality. As I was a full-time student in my business management course in university and also part-time working in a company as a junior marketing manager. That's why I couldn't able to give much time to it.
                 </p>
               </div>
             </article>
