--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   <article class="question">
                     <!-- question title -->
                     <div class="question-title">
-                      <p>LET'S TALK ABOUT GETTING PROPER GUIDLINE</p>
+                      <p>LET'S TALK ABOUT FINDING REAL PATH</p>
                       <!-- button -->
                       <button type="button" class="question-btn">
                         <span class="plus-icon">
@@ -171,20 +171,7 @@
                     <!-- question text -->
                     <div class="question-text">
                       <p>
-                        I was learning the web development as my hobby beside my study and work.
-                        In 2019 i noticed that i am now able to make
-                        full website by html and css but thought that it is not enough for professional level and i started to search how to be
-                        a professional full stack web developer in google,youtube and W3schools,freecodecamp.org,khanAcademy and many more
-                        resources and then i got confused because different platform guiding different things to learn but i noticed one things
-                        is that if i want to be web developer then i want to be good in html ,css and vanilla javascript in the beginning.Later
-                        i admitted in paid top Udemy course called Zero to Mastry to get proper guidline how to be a full stack web
-                        developer.From this course i not only got proper guidline but also learn lots of things such as
-                        html,css,javascript,sass,Bootstrap4,git,github,NPM,React js,redux,https,JSON,AJAX,API,Node js,express
-                        js,postgrasql,postman and also got concept how real and professional web developer works in real projects.It was total
-                        37 hours course but lots of things was covered in this course.I took 1 year to finish this course because i was learning
-                        step by step with strong theorital and practical knowledge.Besides of this course i used
-                        W3schools,khanAcademy,freecodecamp.org,MDN Web Docs and different web-dev youtube channels reading lots of books and
-                        many more resources to get best therotical and practical knowledge
+                        I was learning web development as my hobby with my university study and work. In 2019 I noticed that I am now able to make a full website with HTML and CSS but thought that it is not enough for professional level and I started to search for how to be a professional full-stack web developer in google, youtube and W3schools,freecodecamp.org, khan academy and many more resources and then I got confused because different platform guiding different things to learn but I noticed one thing is that if I want to be a web developer then I need to be good in HTML, CSS and vanilla javascript in the beginning. Later I admitted to paid top Udemy course called the complete web developer to get proper guidline how to be a full stack web developer.From this course i not only got proper guidline but also learn lots of things such as HTML,CSS,javascript,sass,Bootstrap4,git,Github,NPM,React js,redux,HTTPS,JSON,AJAX,API,Node js,express js,PostgreSQL,postman and also got concept how real and professional web developer works in real projects.It was a total 37 hours course but lots of things were covered in this course. I took 1 year to finish this course because I was learning step by step with strong theoretical and practical knowledge. Besides this course I used W3schools,khanAcademy,freecodecamp.org, MDN Web Docs, different web-dev youtube channels, reading lots of books, and many more resources to get the best theoretical and practical knowledge
                       </p>
                     </div>
                   </article>
