--- a/index.html
+++ b/index.html
@@ -194,20 +194,8 @@
               <!-- question text -->
               <div class="question-text">
                 <p>
-                  In june,2020 i have finished my bachelor degree and started working in a company as customer service agents
-                  but i was
-                  not enjoying that job so much and
-                  after one month i quited that job and decided that i want to be a full stack web developer as my future
-                  career.From my
-                  Udemy course i got strong practical knowlege
-                  about forentend web technologies because i was mostly focusing forentend technologies in the beginning as well
-                  as got
-                  fundamental knowledge of backend technologies
-                  for sever and database.From that time i took challenge i will make 50 projects within 50 days to sharp my
-                  forentend technologies such as html,css ,javascript and React js <span><b><a href="https://50days-coding.netlify.app/" target="_blank">50days projects</a></b></span> and now i am trying to get strong theorital and practical
-                  knowledge for backend and i already made
-                  <b>4 more backend projects</b> to sharp my backend web technologies and still learning new things everyday as
-                  it is my hobby.Please check out my portfolio to see what i made yet.At this moment i am looking a company to work as a forentend web developer
+                 In June 2020 I have finished my bachelor's degree and started working in a company as a customer service agent but I was not enjoying that job so much and after one month I quit that job and decided that I want to be a full-stack web developer as my future
+career. From my Udemy course, I got strong practical knowledge about frontend web technologies because I was mostly focusing on frontend technologies in the beginning as well as got fundamental knowledge of backend technologies for server-side and database.From that time i took the challenge i will make 50 projects within 50 days to sharp my frontend technologies such as HTML,CSS ,javascript and React js <span><b><ahref="https://50days-coding.netlify.app/" target="_blank">50days projects</a></b></span> and now i am trying to get strong theoretical and practical knowledge for backend and I already made <b>4 backend projects</b> to sharp my backend web technologies and still learning new things every day as it is my hobby.Please check out my portfolio to see what I made yet. At this moment I am looking for a company to work as a frontend web developer
                 </p>
               </div>
             </article>
