--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class = "row-right">
           <div class = "img-border">
             <div class = "img-container">
-              <img src = "assets/desktop-image.png" class="desktop-home-image" alt = "desktop photo">
+              <img src = "assets/desktop-image.jpg" class="desktop-home-image" alt = "desktop photo">
               <img src="assets/mobile-image.png" class="mobile-home-image" alt="mobile photo">
             </div>
           </div>
@@ -105,7 +105,7 @@
         <section class="questions">
           <!-- title -->
           <div class="title">
-            <h2>click + to see</h2>
+            <h3>click + to see</h3>
           </div>
           <!-- questions -->
           <div class="section-center">
@@ -125,7 +125,7 @@
               </div>
               <!-- question text -->
               <div class="question-text">
-                <p>
+                <p class="first">
                   I was a science background student until college and I always like to do any IT related works since my childhood. After finishing college I did a 1-year diploma in computing where I got fundamental knowledge of programming. In 2015, I planned to complete a bachelor's in abroad and I was planning to study software engineering but as we have a small family business, so my parents asked me to do a business management course. At that time, I was so young and didn't know what is my true interesting field. So I came to Estonia for my higher study which was joining the program (Estonia, Lithuania, and Portugal). As I always like to learn something new. So I was studying and learning something new in this course but in my second year, I noticed that I was spending more time learning different IT-related things and enjoying it a lot because it is kind of my hobby but didn't follow the exact specific path to be specialist on one particular area of programming.
                 </p>
               </div>
@@ -147,8 +147,8 @@
               </div>
               <!-- question text -->
               <div class="question-text">
-                <p>
-                  On 20th June 2018, I decided that I want to be a full-stack web developer and started coding to follow W3schools. When I made my first website(this portfolio website) with HTML and CSS, I can not explain how much I was happy. First, it was made by using float layout and without javascript, and step by step, I added a new feature and changed float to flex&grid layout and javascript for some functionality. As I was a full-time student in my business management course in university and also part-time working in a company as a junior marketing manager. That's why I couldn't able to give much time to it.
+                <p class="second">
+                  On 20th June 2018, I decided that I want to be a full-stack web developer and started coding to follow W3schools. When I made my first website(this portfolio website) with HTML and CSS, I can not explain how much I was happy. First, it was made by using float layout and without javascript, and step by step, I added a new feature and changed float to flex&grid layout and javascript for some functionality. As I was a full-time student in my business management course in university and also part-time working in a company as a junior marketing manager. That's why I couldn't able to give much time to it.I was learning web development as my hobby with my university study and work.
                 </p>
               </div>
             </article>
@@ -170,8 +170,9 @@
                     </div>
                     <!-- question text -->
                     <div class="question-text">
-                      <p>
-                        I was learning web development as my hobby with my university study and work. In 2019 I noticed that I am now able to make a full website with HTML and CSS but thought that it is not enough for professional level and I started to search for how to be a professional full-stack web developer in google, youtube and W3schools,freecodecamp.org, khan academy and many more resources and then I got confused because different platform guiding different things to learn but I noticed one thing is that if I want to be a web developer then I need to be good in HTML, CSS and vanilla javascript in the beginning. Later I admitted to paid top Udemy course called the complete web developer to get proper guidline how to be a full stack web developer.From this course i not only got proper guidline but also learn lots of things such as HTML,CSS,javascript,sass,Bootstrap4,git,Github,NPM,React js,redux,HTTPS,JSON,AJAX,API,Node js,express js,PostgreSQL,postman and also got concept how real and professional web developer works in real projects.It was a total 37 hours course but lots of things were covered in this course. I took 1 year to finish this course because I was learning step by step with strong theoretical and practical knowledge. Besides this course I used W3schools,khanAcademy,freecodecamp.org, MDN Web Docs, different web-dev youtube channels, reading lots of books, and many more resources to get the best theoretical and practical knowledge
+                      <p class="third">In 2019 I noticed that I am now able to make a full website with HTML and CSS but thought that it is not enough for professional level.I started to search for how to be a professional full-stack web developer in google, youtube and W3schools,freecodecamp.org, khan academy and many more resources and then I got confused because different platform guiding different things to learn but I noticed one thing is that if I want to be a web developer then I need to be good in HTML, CSS and vanilla javascript in the beginning. 
+                          Later I admitted to paid top Udemy course called the complete web developer to get proper guidline how to be a full stack web developer.From this course i not only got proper guidline but also learned lots of things which is very important to be a professional full-stack web developer.From this course I got clear idea about html,css,javascript,sass,bootstrap4,git,github,npm,react-js,redux,https,json,ajax,api,node js,express-js,postgreSQL,postman and also got concept how real and professional web developer works in real projects.
+                           It was a total 37 hours course but lots of things were covered in this course. I took 1 year to finish this course because I was learning step by step with strong theoretical and practical knowledge. Besides this course I used W3schools,khanAcademy,freecodecamp.org, MDN Web Docs, different web-dev youtube channels, reading lots of books, and many more resources to get the best theoretical and practical knowledge
                       </p>
                     </div>
                   </article>
@@ -180,7 +181,7 @@
             <article class="question">
               <!-- question title -->
               <div class="question-title">
-                <p>Let's talk about how hobby become profession</p>
+                <p class="last-title">Let's talk about how hobby become profession</p>
                 <!-- button -->
                 <button type="button" class="question-btn">
                   <span class="plus-icon">
@@ -193,9 +194,9 @@
               </div>
               <!-- question text -->
               <div class="question-text">
-                <p>
+                <p class="four">
                  In June 2020 I have finished my bachelor's degree and started working in a company as a customer service agent but I was not enjoying that job so much and after one month I quit that job and decided that I want to be a full-stack web developer as my future
-career. From my Udemy course, I got strong practical knowledge about frontend web technologies because I was mostly focusing on frontend technologies in the beginning as well as got fundamental knowledge of backend technologies for server-side and database.From that time i took the challenge i will make 50 projects within 50 days to sharp my frontend technologies such as HTML,CSS ,javascript and React js <span><b><ahref="https://50days-coding.netlify.app/" target="_blank">50days projects</a></b></span> and now i am trying to get strong theoretical and practical knowledge for backend and I already made <b>4 backend projects</b> to sharp my backend web technologies and still learning new things every day as it is my hobby.Please check out my portfolio to see what I made yet. At this moment I am looking for a company to work as a frontend web developer
+career. From my Udemy course, I got strong practical knowledge about frontend web technologies because I was mostly focusing on frontend technologies in the beginning as well as got fundamental knowledge of backend technologies for server-side and database.From that time i took the challenge i will make 50 projects within 50 days to sharp my frontend technologies such as HTML,CSS ,javascript and React js <span><b><a href="https://50days-coding.netlify.app/" target="_blank">50days projects</a></b></span> and now i am trying to get strong theoretical and practical knowledge for backend and I already made <b>4 backend projects</b> to sharp my backend web technologies and still learning new things every day as it is my hobby.Please check out my portfolio to see what I made yet. At this moment I am looking for a company to work as a frontend web developer
                 </p>
               </div>
             </article>
